tests/NormalTests/paczka1/small_fuzzy/65940537.err
Error in line 1: z3piPc3ssU S898 34,2
Error in line 10: S449 A192 92,1
